--- a/DesktopApp/MainWindow.xaml
+++ b/DesktopApp/MainWindow.xaml
@@ -5,8 +5,166 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DesktopApp"
         mc:Ignorable="d"
-        Title="Simple Desktop Application " Height="450" Width="800">
-    <Grid>
+        Title="Simple Desktop Application " Height="700" Width="800">
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="300"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        <Label FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"
+               Grid.Row="0" Content="CRUD Application for User Managment"/>
+
+        <DataGrid x:Name="AllUsers" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True"
+                  Grid.Row="1" ColumnWidth="*" Margin="5" IsSynchronizedWithCurrentItem="True" >
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="UserId Id" Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="Jmbg" Binding="{Binding Jmbg}"/>
+                <DataGridTextColumn Header="UserName" Binding="{Binding UserName}"/>
+                <DataGridTextColumn Header="Password" Binding="{Binding Password}"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="SurName" Binding="{Binding SurName}"/>
+                <DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}"/>
+                <DataGridTextColumn Header="Phone" Binding="{Binding Phone}"/>
+                <DataGridTextColumn Header="DateOfBirth" Binding="{Binding DateOfBirth}"/>
+                <DataGridTemplateColumn Header="Edit User">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Edit" Click="SelectUserToEdit" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn Header="Delete User">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Delete" Click="DeleteUser"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Border Grid.Column="0" Margin="5" BorderThickness="1" BorderBrush="Black">
+                <StackPanel  Margin="5">
+                    <Label Content="Add new User" FontWeight="Bold"
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" Margin="5"/>
+
+                    <Grid Name="NewUserGrid">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label Grid.Row="0" Grid.Column="0" Content="Jmbg"/>
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Jmbg}"/>
+
+                        <Label Grid.Row="1" Grid.Column="0" Content="UserName"/>
+                        <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding UserName}"/>
+
+                        <Label Grid.Row="2" Grid.Column="0" Content="Password"/>
+                        <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding Password}"/>
+
+                        <Label Grid.Row="3" Grid.Column="0" Content="Name"/>
+                        <TextBox Grid.Row="3" Grid.Column="4" Text="{Binding Name}"/>
+
+                        <Label Grid.Row="4" Grid.Column="0" Content="Sur Name"/>
+                        <TextBox Grid.Row="4" Grid.Column="5" Text="{Binding SurName}"/>
+                        <Label Grid.Row="5" Grid.Column="0" Content="Address"/>
+                        <TextBox Grid.Row="5" Grid.Column="6" Text="{Binding Address}"/>
+                        <Label Grid.Row="6" Grid.Column="0" Content="Email"/>
+                        <TextBox Grid.Row="6" Grid.Column="7" Text="{Binding Email}"/>
+                        <Label Grid.Row="7" Grid.Column="0" Content="Phone"/>
+                        <TextBox Grid.Row="7" Grid.Column="8" Text="{Binding Phone}"/>
+                        <Label Grid.Row="8" Grid.Column="0" Content="DateOfBirth"/>
+                        <TextBox Grid.Row="8" Grid.Column="9" Text="{Binding DateOfBirth }"/>
+
+                        <Button Grid.Row="10" Grid.ColumnSpan="2" Width="150" Content="AddUser" Margin="5" Click="AddUser"
+                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+
+                </StackPanel>
+            </Border>
+
+            <Border Grid.Column="1" Margin="5" BorderThickness="1" BorderBrush="Black">
+                <StackPanel Margin="5">
+                    <Label Content="Edit product" FontWeight="Bold"
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" Margin="5"/>
+
+                    <Grid Name="UpdateProductGrid">
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label Grid.Row="0" Grid.Column="0" Content="Jmbg"/>
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Jmbg}"/>
+
+                        <Label Grid.Row="1" Grid.Column="0" Content="UserName"/>
+                        <TextBox Grid.Row="1" Grid.Column="2" Text="{Binding UserName}"/>
+
+                        <Label Grid.Row="2" Grid.Column="0" Content="Password"/>
+                        <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding Password}"/>
+
+                        <Label Grid.Row="3" Grid.Column="0" Content="Name"/>
+                        <TextBox Grid.Row="3" Grid.Column="4" Text="{Binding Name}"/>
+
+                        <Label Grid.Row="4" Grid.Column="0" Content="Sur Name"/>
+                        <TextBox Grid.Row="4" Grid.Column="5" Text="{Binding SurName}"/>
+                        <Label Grid.Row="5" Grid.Column="0" Content="Address"/>
+                        <TextBox Grid.Row="5" Grid.Column="6" Text="{Binding Address}"/>
+                        <Label Grid.Row="6" Grid.Column="0" Content="Email"/>
+                        <TextBox Grid.Row="6" Grid.Column="7" Text="{Binding Email}"/>
+                        <Label Grid.Row="7" Grid.Column="0" Content="Phone"/>
+                        <TextBox Grid.Row="7" Grid.Column="8" Text="{Binding Phone}"/>
+                        <Label Grid.Row="8" Grid.Column="0" Content="DateOfBirth"/>
+                        <TextBox Grid.Row="8" Grid.Column="9" Text="{Binding DateOfBirth }"/>
+
+
+                        <Button Grid.Row="10" Grid.ColumnSpan="2" Width="150" Click="UpdateItem"
+                                Content="Edit" Margin="5"
+                            HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+
+                </StackPanel>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
